--- a/EN/iPhone/index.html
+++ b/EN/iPhone/index.html
@@ -338,7 +338,7 @@
     
     <span class="footer">Giveaway - </span>
     <span class="footer">About Giveaway - </span>
-    <a class="footer" href="https://r.bahirasentto.top/terms.php?groupds=163">Terms</a>
+    <a class="footer" href="https://webeasyhit.com/cf/click/1">Terms</a>
 </div>
 
 
