--- a/EN/Samsung/index.html
+++ b/EN/Samsung/index.html
@@ -10,7 +10,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/bootstrap.min-1.css">
-<link rel="stylesheet" href="fonts/font-awesome.min-3.html">
+<link rel="stylesheet" href="css/font-awesome.css">
 <link rel="stylesheet" href="css/index-stylesheet-1.css">
 
 
