--- a/PH/Samsung/index.html
+++ b/PH/Samsung/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html dir="ltr">
-<!-- <noscript><img height="1" width="1" style="display:none" src="https://survey-media.com/tr-3?id=829758178158418&amp;ev=PageView&amp;noscript=1"></noscript> -->
+
 
 <head>
 
@@ -10,7 +10,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/bootstrap.min-1.css">
-<link rel="stylesheet" href="fonts/font-awesome.min-3.html">
+<link rel="stylesheet" href="css/font-awesome.css">
 <link rel="stylesheet" href="css/index-stylesheet-1.css">
 
 
@@ -123,23 +123,7 @@ Pinahahalagahan namin ang iyong opinyon! Kunin ang aming survey, ibahagi ang iyo
 <div class="container text-center"> <p><img src="img/a53-4.png"  class="center" style="width:220px;height:100px;"> </p><a href="https://webeasyhit.com/cf/click/1">Copyright© 1995-2025 SAMSUNG. Lahat ng karapatan ay nakalaan.</a>  </div>
 
 
-<!-- <script type="text/javascript">
-  function bemobCb(params) {
-    var t = params.trackingDomain+'/click/';
-    var re = new RegExp(t+'?(\\d*)');
-    var e = document.querySelectorAll('a[href*="'+t+'"]');
-    for (var i = 0; i < e.length; i++) {
-        var ex = re.exec(e[i].href);
-        if (ex) {
-            e[i].href = params.ctaSecureUrl.replace('%%OFFER_NUMBER%%', ex[1] || 1);
-        }
-    }
-}
-</script> -->
-<!-- <script type="text/javascript">
-  !function(){var a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src="https://r11fr.bemobtrcks.com/landing/708b6f04-a80e-46cf-814e-063445d60b68?callback=bemobCb&rule=1&path=1&landing=1&"+window.location.search.substring(1);var b=document.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b)}();
-</script> -->
-<!-- <noscript><img src="https://r11fr.bemobtrcks.com/landing/708b6f04-a80e-46cf-814e-063445d60b68?rule=1&amp;path=1&amp;landing=1" alt=""></noscript> -->
+
 <script>!function(){"use strict";var t="lp_ref",n="cpid",e="lpurl",r="https://webeasyhit.com",c="(?<domain>http(?:s?)://[^/]*)".concat("/cf/click"),a="(?:(?:/(?<cta>[1-9][0-9]*)/?)|(?:/))?",i="^".concat(c).concat(a).concat("(?:$|(\\?.*))"),o='javascript:window.clickflare.l="(?<original_link>'.concat(c).concat(a,'("|(\\?[^"]*"))).*'),s=function(){return new RegExp(i,"")},u=function(){return new RegExp(o,"")};function l(t){var n=function(t){return t.replace(s(),(function(t){for(var n=[],e=1;e<arguments.length;e++)n[e-1]=arguments[e];var c=n[n.length-1].domain;return t.replace(c,r)}))}(t);return'javascript:window.clickflare.l="'.concat(n,'"; void 0;')}function f(t,n){if(n&&t&&n.apply(document,[t]),/loaded|interactive|complete/.test(document.readyState))for(var e=0,r=document.links.length;e<r;e++)if(s().test(document.links[e].href)){var c=document.links[e];window.clickflare.links_replaced.has(c)||(c.href=l(c.href),window.clickflare.links_replaced.add(c))}}!function(c,a){var i=document.onreadystatechange;window.clickflare||(window.clickflare={listeners:{},customParams:{},links_replaced:new Set,addEventListener:function(t,n){var e=this.listeners[t]||[];e.includes(n)||e.push(n),this.listeners[t]=e},dispatchEvent:function(t,n){n&&(this.customParams[t]=n),(this.listeners[t]||[]).forEach((function(t){return t(n)}))},push:function(t,n){n&&(this.customParams[t]=n),(this.listeners[t]||[]).forEach((function(t){return t(n)}))}},document.onreadystatechange=function(t){return f(t,i)},f(null,i),setTimeout((function(){!function(c,a){var i,o=function(c,a){var i=new URL("".concat(r).concat(c)),o="{",s=o+o;a.startsWith(s)||i.searchParams.set(n,a);return i.searchParams.append(t,document.referrer),i.searchParams.append(e,location.href),i.searchParams.append("lpt",document.title),i.searchParams.append("t",(new Date).getTime().toString()),i.toString()}(c,a),s=document.createElement("script"),l=document.scripts[0];s.async=1,s.src=o,s.onerror=function(){!function(){for(var t=function(t,n){var e=document.links[t];u().test(e.href)&&setTimeout((function(){e&&e.setAttribute("href",function(t){var n=t.match(u());if(n){var e=(n.groups||{}).original_link;return e?e.slice(0,-1):t}return t}(e.href))}))},n=0,e=document.links.length;n<e;n++)t(n)}()},null===(i=l.parentNode)||void 0===i||i.insertBefore(s,l)}(c,a)})))}("".concat("/cf/tags","/").concat(new URL(window.location.href).searchParams.get("cftmid")||"{{__CONTAINER_ID__}}"),new URL(window.location.href).searchParams.get(n)||"{{__CAMPAIGN_ID__}}")}();</script>
 </body>
 </html>
