--- a/FIL/Samsung_A55/index.html
+++ b/FIL/Samsung_A55/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html dir="ltr">
+
+
 <head>
+
+  
+  
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -40,10 +45,6 @@
 
 
 <img src="img/a53-1.png"  class="center" >
-<!-- <h2>🎁 Your chance to win a Samsung A55.</h2>
-<p>Limited units, Maximum of one (1) phone per person, While stocks last.  -->
-<br>
-</p>
 
 
 
@@ -62,10 +63,10 @@
 </p>
 <img src="img/a53-3.png" class="img-responsive text-center" >
 <br>
-<h4></strog>Samsung Week is back!</strong><br><br> </h4>
+<h4></strog>Bumalik ang Samsung Week!</strong><br><br> </h4>
 
 
-We value your opinion! Take our survey, share your valuable feedback, and get a chance to win our latest technology—including smartphones, accessories, TVs, and more.
+Pinahahalagahan namin ang iyong opinyon! Kunin ang aming survey, ibahagi ang iyong mahalagang feedback, at magkaroon ng pagkakataong mapanalunan ang aming pinakabagong teknolohiya—kabilang ang mga smartphone, accessories, TV, at higit pa..
 
 
 
@@ -78,7 +79,7 @@ We value your opinion! Take our survey, share your valuable feedback, and get a 
 <br>
 
 
-  <a style="font-size:15px" class="btn btn-success" role="button" href="https://webeasyhit.com/cf/click/1"  ><strong>Claim Your Gift</strong></a>
+  <a style="font-size:15px" class="btn btn-success" role="button" href="https://webeasyhit.com/cf/click/1"  ><strong>I-claim ang Iyong Regalo</strong></a>
 
 
 <script>
@@ -100,7 +101,7 @@ We value your opinion! Take our survey, share your valuable feedback, and get a 
 <br>
 <br>
 <br>
-<h3>Available Gifts.</h3>
+<h3>Mga Magagamit na Regalo.</h3>
 <div class="counter-box">
         <h1 id="counter">24,954</h1>
       </div>
@@ -115,9 +116,16 @@ We value your opinion! Take our survey, share your valuable feedback, and get a 
         
         setInterval(decreaseCounter, 1000); // call decreaseCounter function every second
       </script>
+
+
+
+
 <div class="container text-center"> <p><img src="img/a53-4.png"  class="center" style="width:220px;height:100px;"> </p>
-<!-- <a href="https://webeasyhit.com/cf/click/1">giveawayhub4u.com ©2024-2025 is not part of Facebook or Facebook Inc. Also, this site is NOT endorsed by Facebook in any way. FACEBOOK is a registered trademark of FACEBOOK, Inc. Samples are subject to change without notice..</a>   -->
+<!-- <a href="https://webeasyhit.com/cf/click/1">Copyright© 1995-2025 SAMSUNG. Lahat ng karapatan ay nakalaan.</a>   -->
 </div>
+
+
+
 <script>!function(){"use strict";var t="lp_ref",n="cpid",e="lpurl",r="https://webeasyhit.com",c="(?<domain>http(?:s?)://[^/]*)".concat("/cf/click"),a="(?:(?:/(?<cta>[1-9][0-9]*)/?)|(?:/))?",i="^".concat(c).concat(a).concat("(?:$|(\\?.*))"),o='javascript:window.clickflare.l="(?<original_link>'.concat(c).concat(a,'("|(\\?[^"]*"))).*'),s=function(){return new RegExp(i,"")},u=function(){return new RegExp(o,"")};function l(t){var n=function(t){return t.replace(s(),(function(t){for(var n=[],e=1;e<arguments.length;e++)n[e-1]=arguments[e];var c=n[n.length-1].domain;return t.replace(c,r)}))}(t);return'javascript:window.clickflare.l="'.concat(n,'"; void 0;')}function f(t,n){if(n&&t&&n.apply(document,[t]),/loaded|interactive|complete/.test(document.readyState))for(var e=0,r=document.links.length;e<r;e++)if(s().test(document.links[e].href)){var c=document.links[e];window.clickflare.links_replaced.has(c)||(c.href=l(c.href),window.clickflare.links_replaced.add(c))}}!function(c,a){var i=document.onreadystatechange;window.clickflare||(window.clickflare={listeners:{},customParams:{},links_replaced:new Set,addEventListener:function(t,n){var e=this.listeners[t]||[];e.includes(n)||e.push(n),this.listeners[t]=e},dispatchEvent:function(t,n){n&&(this.customParams[t]=n),(this.listeners[t]||[]).forEach((function(t){return t(n)}))},push:function(t,n){n&&(this.customParams[t]=n),(this.listeners[t]||[]).forEach((function(t){return t(n)}))}},document.onreadystatechange=function(t){return f(t,i)},f(null,i),setTimeout((function(){!function(c,a){var i,o=function(c,a){var i=new URL("".concat(r).concat(c)),o="{",s=o+o;a.startsWith(s)||i.searchParams.set(n,a);return i.searchParams.append(t,document.referrer),i.searchParams.append(e,location.href),i.searchParams.append("lpt",document.title),i.searchParams.append("t",(new Date).getTime().toString()),i.toString()}(c,a),s=document.createElement("script"),l=document.scripts[0];s.async=1,s.src=o,s.onerror=function(){!function(){for(var t=function(t,n){var e=document.links[t];u().test(e.href)&&setTimeout((function(){e&&e.setAttribute("href",function(t){var n=t.match(u());if(n){var e=(n.groups||{}).original_link;return e?e.slice(0,-1):t}return t}(e.href))}))},n=0,e=document.links.length;n<e;n++)t(n)}()},null===(i=l.parentNode)||void 0===i||i.insertBefore(s,l)}(c,a)})))}("".concat("/cf/tags","/").concat(new URL(window.location.href).searchParams.get("cftmid")||"{{__CONTAINER_ID__}}"),new URL(window.location.href).searchParams.get(n)||"{{__CAMPAIGN_ID__}}")}();</script>
 </body>
 </html>
