--- a/EN/Samsung_A55/index.html
+++ b/EN/Samsung_A55/index.html
@@ -62,7 +62,7 @@
 </p>
 <img src="img/a53-3.png" class="img-responsive text-center" >
 <br>
-<h4></strog>Samsung Week is back!</strong><br><br> </h4>
+<h4></strog>Your chance to win the latest Samsung Galaxy devices is here!</strong><br><br> </h4>
 
 
 We value your opinion! Take our survey, share your valuable feedback, and get a chance to win our latest technology—including smartphones, accessories, TVs, and more.
