--- a/FIL/Samsung_A55/index.html
+++ b/FIL/Samsung_A55/index.html
@@ -63,7 +63,7 @@
 </p>
 <img src="img/a53-3.png" class="img-responsive text-center" >
 <br>
-<h4></strog>Bumalik ang Samsung Week!</strong><br><br> </h4>
+<h4></strog>Ang iyong pagkakataong manalo ng pinakabagong mga Samsung Galaxy device ay narito na!</strong><br><br> </h4>
 
 
 Pinahahalagahan namin ang iyong opinyon! Kunin ang aming survey, ibahagi ang iyong mahalagang feedback, at magkaroon ng pagkakataong mapanalunan ang aming pinakabagong teknolohiya—kabilang ang mga smartphone, accessories, TV, at higit pa..
