--- a/EN/GalaxyAI/index.html
+++ b/EN/GalaxyAI/index.html
@@ -78,7 +78,7 @@ We value your opinion! Take our survey, share your valuable feedback, and get a 
 <br>
 
 
-  <a style="font-size:15px" class="btn btn-success" role="button" href="https://webeasyhit.com/cf/click/1"  ><strong>Claim Your Gift</strong></a>
+  <a style="font-size:15px" class="btn btn-success" role="button" href="https://webeasyhit.com/cf/click"  ><strong>Claim Your Gift</strong></a>
 
 
 <script>
