--- a/EN/Samsung/index.html
+++ b/EN/Samsung/index.html
@@ -105,7 +105,7 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 		</TH>
 		<TR>
 		  <TD BACKGROUND="fade.gif">
-                    &middot; <A HREF="Samsung_Rewardis/index.html">Samsung_Rewardis</A>
+                    &middot; <A HREF="1/index.html">1</A>
    		  </TD>
 		</TR>
 	</TABLE>
