--- a/EN/GalaxyAI_2/index.html
+++ b/EN/GalaxyAI_2/index.html
@@ -91,7 +91,7 @@
       <p>**Maximum of one (1) free gift per account.** <br>
       </p>
       <div style="max-width: 600px; margin: auto; font-family: Arial, sans-serif; text-align: center; padding: 30px; background: #ffffff; border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15); border: 2px solid #0078D4;">
-        <p style="color: #333; font-size: 18px; line-height: 1.6; font-weight: bold;"> Your chance to win the latest Samsung Galaxy tech is here! </p>
+        <p style="color: #333; font-size: 18px; line-height: 1.6; font-weight: bold;"> Your chance to win the latest Samsung Galaxy products is here! </p>
         <p style="color: #555; font-size: 16px; line-height: 1.6; margin: 15px 0;"> ✅ Complete a short survey and enter for a chance to win exclusive <strong>Samsung Galaxy</strong> prizes, including <strong>smartphones, accessories, smartwatches, and more!</strong>
         </p>
         <p style="color: #28a745; font-size: 18px; font-weight: bold; background: #eafbea; padding: 10px; border-radius: 6px; display: inline-block;"> 🎁 Bonus: Get a <strong>guaranteed surprise gift</strong> just for participating! </p>
