--- a/EN/GalaxyAI_2_Global/index.html
+++ b/EN/GalaxyAI_2_Global/index.html
@@ -168,7 +168,7 @@
       </script>
 
       <br><br>
-
+<div class="container text-center"> <p><img src="img/a53-4.png"  class="center" style="width:220px;height:100px;"> </p>
       <div class="container text-center">
         <a href="#">Copyright© 1995-2025 All rights reserved.</a>
       </div>
